Don't use Java 11 Path.of(), use Paths.get() instead